--- a/demo_app/app/assets/stylesheets/custom.css.scss
+++ b/demo_app/app/assets/stylesheets/custom.css.scss
@@ -169,7 +169,18 @@ input, textarea, select, .uneditable-input {
   @extend .control-group;
   @extend .error;
  }
-      margin-left: 10px;
+
+ /* users index */
+
+.users {
+  list-style: none;
+  margin: 0;
+  li {
+    overflow: auto;
+    padding: 10px 0;
+    border-top: 1px solid $grayLighter;
+    &:last-child {
+      border-bottom: 1px solid $grayLighter
     }
   }
 }
